--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -1,5 +1,6 @@
 @keyframes progress-bar {
   0% {
+    z-index: 3;
     transform: scaleX(0);
     opacity: 1;
   }
@@ -18,10 +19,12 @@
   100% {
     transform: scaleX(1);
     opacity: 0;
+    z-index: -3;
   }
 }
 @keyframes progress-bar--bg {
   0% {
+    z-index: 3;
     opacity: 1;
   }
   85% {
@@ -29,6 +32,7 @@
   }
   100% {
     opacity: 0;
+    z-index: -3;
   }
 }
 @keyframes menu_anim {
