--- a/sass/utils/_keyframesloader.scss
+++ b/sass/utils/_keyframesloader.scss
@@ -1,5 +1,6 @@
 @keyframes progress-bar {
 	0% {
+		z-index: 3;
 		transform: scaleX(0);
 		opacity: 1;
 	}
@@ -18,11 +19,13 @@
 	100% {
 		transform: scaleX(1);
 		opacity: 0;
+		z-index: -3;
 	}
 }
 
 @keyframes progress-bar--bg {
 	0% {
+		z-index: 3;
 		opacity: 1;
 	}
 	85% {
@@ -30,5 +33,6 @@
 	}
 	100% {
 		opacity: 0;
+		z-index: -3;
 	}
 }
