--- a/sass/utils/_keyframesloader.scss
+++ b/sass/utils/_keyframesloader.scss
@@ -2,6 +2,7 @@
 	0% {
 		transform: scaleX(0);
 		opacity: 1;
+		z-index: 3;
 	}
 	17% {
 		transform: scaleX(0.18);
@@ -14,21 +15,25 @@
 	}
 	85% {
 		opacity: 1;
+		z-index: 3;
 	}
 	100% {
 		transform: scaleX(1);
 		opacity: 0;
+		z-index: 0;
 	}
 }
 
 @keyframes progress-bar--bg {
 	0% {
 		opacity: 1;
+		z-index: 3;
 	}
 	85% {
 		opacity: 1;
 	}
 	100% {
 		opacity: 0;
+		z-index: 0;
 	}
 }
