--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -14,6 +14,7 @@ main {
 		margin-top: -40px;
 		position: relative;
 		background-color: rgb(246, 246, 246);
+		z-index: 0;
 
 		.name {
 			display: flex;
@@ -106,6 +107,9 @@ main {
 					&:active p {
 						animation: description_p_width 1000ms ease-in-out;
 						animation-fill-mode: forwards;
+						@include tablet-only {
+							animation: none;
+						}
 					}
 					h3 {
 						margin: 15px 0px 5px 5px;
