Modification of loader
Problem with the z-index of the loader

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,479 +1,8 @@
-$primary-color: #9356dc;
-$secondary-color: #ff79da;
-$tertiary-color: #99e2d0;
-
-$font-title: "Shrikhand", cursive;
-$font-main: "Roboto", sans-serif;
-
-@keyframes menu_anim {
-	from {
-		transform: translate(0, 20px);
-		opacity: 0;
-	}
-	to {
-		transform: translate(0, 0);
-		opacity: 1;
-	}
-}
-
-@mixin tablet-only {
-	@media screen and (min-width: 381px) {
-		@content;
-	}
-}
-
-@mixin pc1024-only {
-	@media screen and (min-width: 1024px) {
-		@content;
-	}
-}
-
-@mixin pc1440-only {
-	@media screen and (min-width: 1440px) {
-		@content;
-	}
-}
-
-@keyframes progress-bar {
-	0% {
-		transform: scaleX(0);
-		opacity: 1;
-	}
-	17% {
-		transform: scaleX(0.18);
-	}
-	24% {
-		transform: scaleX(0.4);
-	}
-	46% {
-		transform: scaleX(0.81);
-	}
-	85% {
-		opacity: 1;
-	}
-	100% {
-		transform: scaleX(1);
-		opacity: 0;
-	}
-}
-
-@keyframes progress-bar--bg {
-	0% {
-		opacity: 1;
-	}
-	85% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-html,
-body {
-	margin: 0;
-	padding: 0;
-	@include pc1440-only {
-		max-width: 1440px;
-		margin: auto;
-	}
-}
-
-h1 {
-	font-size: 20px;
-	font-weight: bold;
-	font-family: $font-main;
-	text-align: center;
-}
-
-h2 {
-	font-size: 20px;
-	font-weight: bold;
-	font-family: $font-main;
-}
-
-h3 {
-	font-size: 16px;
-	font-weight: bold;
-	font-family: $font-main;
-}
-
-p {
-	font-size: 14px;
-	font-family: $font-main;
-}
-
-a {
-	text-decoration: none;
-	font-size: 14px;
-	font-family: $font-main;
-	color: black;
-}
-
-li {
-	text-decoration: none;
-	font-size: 14px;
-	font-family: $font-main;
-	color: black;
-	list-style-type: none;
-}
-
-.loader {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 75%;
-	position: fixed;
-	top: 25%;
-	left: 13%;
-	z-index: 2;
-	@include tablet-only {
-		left: 30%;
-	}
-	@include pc1440-only() {
-		left: 37.5%;
-	}
-	p {
-		width: 50%;
-		opacity: 0;
-		text-align: center;
-		font-family: $font-title;
-		font-size: 20px;
-		padding: 20px;
-		color: white;
-		border-radius: 50px;
-		background: linear-gradient(
-			357deg,
-			rgba(147, 86, 220, 1) 5%,
-			rgba(255, 121, 218, 1) 100%,
-			rgba(234, 234, 234, 1) 100%
-		);
-		animation: progress-bar--bg 1500ms;
-		animation-fill-mode: backwards;
-	}
-	@include tablet-only {
-		width: 40%;
-	}
-	@include pc1440-only() {
-		width: 25%;
-	}
-	.progress {
-		background: rgba(223, 223, 223, 0.602);
-		border-radius: 50px;
-		opacity: 0;
-		animation: progress-bar--bg 1500ms;
-		animation-fill-mode: backwards;
-		width: 100%;
-		&__bar {
-			border-radius: 50px;
-			background: $primary-color;
-			padding: 20px;
-			opacity: 0;
-			animation: progress-bar 1500ms;
-			animation-fill-mode: backwards;
-			transform-origin: left;
-		}
-	}
-}
-header {
-	#logo_header {
-		padding: 15px;
-		text-align: center;
-	}
-}
-
-.main {
-	&__container {
-		.form {
-			height: 50px;
-			background-color: #eaeaea;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			background: rgb(234, 234, 234);
-			background: linear-gradient(
-				0deg,
-				rgba(234, 234, 234, 1) 89%,
-				rgba(144, 144, 144, 1) 100%,
-				rgba(234, 234, 234, 1) 100%
-			);
-
-			form {
-				color: #353535;
-
-				input {
-					background-color: #eaeaea;
-					padding-left: 15px;
-					border: none;
-					font-family: $font-main;
-					font-weight: bold;
-					font-size: 15px;
-				}
-			}
-		}
-
-		.description {
-			background-color: #f6f6f6;
-
-			text-align: center;
-			padding-top: 40px;
-			padding-bottom: 40px;
-			height: 300px;
-			@include tablet-only {
-				height: 200px;
-			}
-
-			h1 {
-				padding: 0 80px;
-			}
-
-			p {
-				padding: 0 35px;
-				color: #353535;
-				margin-top: 20px;
-				margin-bottom: 70px;
-			}
-
-			.button {
-				background: linear-gradient(
-					357deg,
-					rgba(147, 86, 220, 1) 5%,
-					rgba(255, 121, 218, 1) 100%,
-					rgba(234, 234, 234, 1) 100%
-				);
-				padding: 20px;
-				border-radius: 50px;
-				color: white;
-				margin-top: 35px;
-				box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-
-				&:hover {
-					background: linear-gradient(
-						357deg,
-						lighten(rgba(147, 86, 220, 1), 5%) 5%,
-						lighten(rgba(255, 121, 218, 1), 5%) 100%,
-						lighten(rgba(234, 234, 234, 1), 5%) 100%
-					);
-					box-shadow: 5px 4px 30px -8px #000000;
-				}
-			}
-		}
-	}
-}
-
-.fonctionnement {
-	margin: 0px 20px;
-	@include tablet-only {
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__container {
-		@include tablet-only {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-		}
-		&__description {
-			background-color: #f6f6f6;
-			display: flex;
-			align-items: center;
-			margin: 25px 0px;
-			padding: 10px;
-			border-radius: 50px;
-			box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-			@include tablet-only {
-				width: 35%;
-			}
-			@include pc1024-only {
-				width: 25%;
-			}
-
-			.fas {
-				padding: 15px;
-				color: rgb(126, 126, 126);
-			}
-
-			p {
-				font-weight: bold;
-			}
-
-			.number {
-				color: white;
-				font-weight: normal;
-				margin-left: -15px;
-				height: 25px;
-				width: 25px;
-				background-color: $primary-color;
-				border-radius: 50%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-			}
-
-			&--violet {
-				background-color: rgb(245, 237, 255);
-				display: flex;
-				align-items: center;
-				margin: 25px 0px;
-				padding: 10px;
-				border-radius: 50px;
-				box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-				@include tablet-only {
-					width: 35%;
-				}
-				@include pc1024-only {
-					width: 25%;
-				}
-
-				.fas {
-					padding: 15px;
-					color: $primary-color;
-				}
-
-				p {
-					font-weight: bold;
-				}
-
-				.number {
-					color: white;
-					font-weight: normal;
-					margin-left: -15px;
-					height: 25px;
-					width: 25px;
-					background-color: $primary-color;
-					border-radius: 50%;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-				}
-			}
-		}
-	}
-}
-
-#restaurants {
-	margin: 0 20px;
-
-	.restaurants__container {
-		.restaurants {
-			@include tablet-only {
-				display: flex;
-				flex-wrap: wrap;
-				flex-direction: row;
-				justify-content: space-evenly;
-			}
-			.restaurants__container2 {
-				display: flex;
-				flex-direction: column;
-				border-radius: 20px;
-				box-shadow: 0 0 7px #c1c1c1;
-				margin: 20px 0px;
-				position: relative;
-
-				@include tablet-only {
-					width: 45%;
-				}
-
-				img {
-					object-fit: cover;
-					height: 175px;
-					width: 100%;
-					border-radius: 20px 20px 0 0;
-				}
-
-				.new_topright {
-					position: absolute;
-					top: 8px;
-					right: 16px;
-					color: rgb(0, 135, 102);
-					background-color: $tertiary-color;
-					padding: 8px 15px;
-					border-radius: 5px;
-				}
-				.heart {
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					font-size: 25px;
-					padding: 25px;
-					position: relative;
-
-					.far {
-						position: absolute;
-						top: 25px;
-						right: 0;
-						bottom: 0;
-						left: 0px;
-						z-index: -1;
-					}
-					.fas {
-						color: $primary-color;
-						opacity: 0;
-						position: absolute;
-						top: 25px;
-						right: 0;
-						bottom: 0;
-						left: 0px;
-						z-index: 1;
-						transition: opacity 250ms;
-						animation-fill-mode: forwards;
-						&:active {
-							opacity: 1;
-						}
-					}
-				}
-			}
-
-			&__description {
-				display: flex;
-				justify-content: space-between;
-				height: 75px;
-
-				&__texte {
-					display: flex;
-					flex-direction: column;
-					margin: 5px 15px;
-					line-height: 10px;
-
-					p {
-						font-size: 16px;
-					}
-				}
-			}
-		}
-	}
-}
-
-footer {
-	background-color: rgb(53, 53, 53);
-	margin: 0;
-	padding: 0 0 20px 0;
-
-	#logo_footer {
-		padding: 15px 15px;
-
-		h3 {
-			color: white;
-			font-family: $font-title;
-			margin: 0;
-			font-size: 20px;
-		}
-	}
-
-	ul {
-		padding: 0px 15px;
-		margin: 0;
-		line-height: 25px;
-
-		a {
-			color: white;
-
-			.fas {
-				padding: 0px 10px 0 0;
-				font-size: 10px;
-			}
-		}
-	}
-}
+@import "./utils/variables";
+@import "./utils/keyframesloader";
+@import "./utils/mixin";
+@import "./base/baseindex";
+@import "./layouts/loaderindex";
+@import "./layouts/headerindex";
+@import "./pages/index";
+@import "./layouts/footer";
