--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,21 +1,8 @@
-@keyframes menu_anim {
-  from {
-    transform: translate(0, 20px);
-    opacity: 0;
-  }
-  to {
-    transform: translate(0, 0);
-    opacity: 1;
-  }
-}
 @keyframes progress-bar {
   0% {
     transform: scaleX(0);
     opacity: 1;
-<<<<<<< HEAD
     z-index: 4;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
   }
   17% {
     transform: scaleX(0.18);
@@ -28,27 +15,18 @@
   }
   85% {
     opacity: 1;
-<<<<<<< HEAD
     z-index: 4;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
   }
   100% {
     transform: scaleX(1);
     opacity: 0;
-<<<<<<< HEAD
     z-index: -4;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
   }
 }
 @keyframes progress-bar--bg {
   0% {
     opacity: 1;
-<<<<<<< HEAD
     z-index: 4;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
   }
   85% {
     opacity: 1;
@@ -56,10 +34,18 @@
   }
   100% {
     opacity: 0;
-<<<<<<< HEAD
     z-index: -4;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
+  }
+}
+@keyframes index-number {
+  0% {
+    z-index: 4;
+  }
+  99% {
+    z-index: 4;
+  }
+  100% {
+    z-index: -1;
   }
 }
 html,
@@ -124,13 +110,11 @@ li {
   position: fixed;
   top: 25%;
   left: 13%;
-<<<<<<< HEAD
   z-index: -1;
-=======
-  z-index: 2;
->>>>>>> parent of b6bb235 (Correction of index.scss)
+  animation: index-number 1500ms;
+  animation-fill-mode: forwards;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .loader {
     left: 30%;
   }
@@ -153,7 +137,7 @@ li {
   animation: progress-bar--bg 1500ms;
   animation-fill-mode: backwards;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .loader {
     width: 40%;
   }
@@ -211,7 +195,7 @@ header #logo_header {
   padding-bottom: 40px;
   height: 300px;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .main__container .description {
     height: 200px;
   }
@@ -232,10 +216,7 @@ header #logo_header {
   color: white;
   margin-top: 35px;
   box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
-<<<<<<< HEAD
-  z-index: 2;
-=======
->>>>>>> parent of b6bb235 (Correction of index.scss)
+  z-index: 6;
 }
 .main__container .description .button:hover {
   background: linear-gradient(357deg, #a16be0 5%, #ff93e1 100%, #f7f7f7 100%);
@@ -245,13 +226,13 @@ header #logo_header {
 .fonctionnement {
   margin: 0px 20px;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .fonctionnement {
     display: flex;
     flex-direction: column;
   }
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .fonctionnement__container {
     display: flex;
     flex-wrap: wrap;
@@ -267,7 +248,7 @@ header #logo_header {
   border-radius: 50px;
   box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .fonctionnement__container__description {
     width: 35%;
   }
@@ -305,7 +286,7 @@ header #logo_header {
   border-radius: 50px;
   box-shadow: 5px 4px 17px -8px rgba(0, 0, 0, 0.77);
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   .fonctionnement__container__description--violet {
     width: 35%;
   }
@@ -338,7 +319,7 @@ header #logo_header {
 #restaurants {
   margin: 0 20px;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   #restaurants .restaurants__container .restaurants {
     display: flex;
     flex-wrap: wrap;
@@ -354,7 +335,7 @@ header #logo_header {
   margin: 20px 0px;
   position: relative;
 }
-@media screen and (min-width: 381px) {
+@media screen and (min-width: 540px) {
   #restaurants .restaurants__container .restaurants .restaurants__container2 {
     width: 45%;
   }
