--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -37,6 +37,17 @@
     z-index: -4;
   }
 }
+@keyframes index-number {
+  0% {
+    z-index: 4;
+  }
+  99% {
+    z-index: 4;
+  }
+  100% {
+    z-index: -1;
+  }
+}
 @keyframes menu_anim {
   from {
     transform: translate(0, 20px);
@@ -136,7 +147,9 @@ li {
   position: fixed;
   top: 25%;
   left: 13%;
-  z-index: -1;
+  z-index: 4;
+  animation: index-number 1500ms;
+  animation-fill-mode: forwards;
 }
 @media screen and (min-width: 540px) {
   .loader {
