--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -3,7 +3,7 @@
 @import "./utils/keyframespages";
 @import "./utils/mixin";
 @import "./base/basepages";
-@import "./layouts/loader";
+@import "./layouts/loaderpages";
 @import "./layouts/headerpages";
 @import "./pages/restaurant";
 @import "./layouts/footer";
