Correction of sass pages

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,7 +2,7 @@
 @import "./utils/keyframesloader";
 @import "./utils/mixin";
 @import "./base/baseindex";
-@import "./layouts/loaderindex";
+@import "./layouts/loader";
 @import "./layouts/headerindex";
 @import "./pages/index";
 @import "./layouts/footer";
