--- a/public/css/index.css
+++ b/public/css/index.css
@@ -372,7 +372,9 @@ header #logo_header {
   z-index: -1;
 }
 #restaurants .restaurants__container .restaurants .restaurants__container2 .heart .fas {
-  color: #9356dc;
+  background: linear-gradient(360deg, #9356dc 58%, #ff79da 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   opacity: 0;
   position: absolute;
   top: 25px;
