--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -66,6 +66,14 @@
     transform: rotate(0deg);
   }
 }
+@keyframes checkbox-rotation-reverse {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
+}
 @keyframes checkbox-translation {
   from {
     margin-right: -70px;
@@ -74,12 +82,28 @@
     margin-right: 0px;
   }
 }
+@keyframes checkbox-translation-reverse {
+  from {
+    margin-right: 0px;
+  }
+  to {
+    margin-right: -70px;
+  }
+}
 @keyframes description_p_width {
   from {
     width: 240px;
   }
   to {
     width: 200px;
+  }
+}
+@keyframes description_p_width-reverse {
+  from {
+    width: 200px;
+  }
+  to {
+    width: 240px;
   }
 }
 html,
@@ -136,68 +160,6 @@ li {
   font-family: "Roboto", sans-serif;
   color: black;
   list-style-type: none;
-}
-
-.loader {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-  position: fixed;
-  top: 25%;
-  left: 13%;
-  z-index: 4;
-  animation: index-number 1500ms;
-  animation-fill-mode: forwards;
-}
-@media screen and (min-width: 540px) {
-  .loader {
-    left: 30%;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .loader {
-    left: 37.5%;
-  }
-}
-.loader p {
-  width: 50%;
-  opacity: 0;
-  text-align: center;
-  font-family: "Shrikhand", cursive;
-  font-size: 20px;
-  padding: 20px;
-  color: white;
-  border-radius: 50px;
-  background: linear-gradient(357deg, #9356dc 5%, #ff79da 100%, #eaeaea 100%);
-  animation: progress-bar--bg 1500ms;
-  animation-fill-mode: backwards;
-}
-@media screen and (min-width: 540px) {
-  .loader {
-    width: 40%;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .loader {
-    width: 25%;
-  }
-}
-.loader .progress {
-  background: rgba(223, 223, 223, 0.602);
-  opacity: 0;
-  animation: progress-bar--bg 1500ms;
-  animation-fill-mode: backwards;
-  width: 100%;
-}
-.loader .progress__bar {
-  background: #9356dc;
-  padding: 18px;
-  opacity: 0;
-  animation: progress-bar 1500ms;
-  animation-fill-mode: backwards;
-  transform-origin: left;
 }
 
 header {
@@ -257,7 +219,9 @@ main .menu .name .heart .far {
   z-index: 0;
 }
 main .menu .name .heart .fas {
-  color: #9356dc;
+  background: linear-gradient(360deg, #9356dc 58%, #ff79da 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   opacity: 0;
   position: absolute;
   top: 10px;
@@ -279,17 +243,17 @@ main .menu__container .title .underline {
 }
 main .menu__container .container_animation {
   transform-origin: top;
-  animation: menu_anim 800ms 1500ms ease-in-out;
+  animation: menu_anim 800ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .container_animation2 {
   transform-origin: top;
-  animation: menu_anim 800ms 2000ms ease-in-out;
+  animation: menu_anim 800ms 500ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .container_animation3 {
   transform-origin: top;
-  animation: menu_anim 800ms 2500ms ease-in-out;
+  animation: menu_anim 800ms 1000ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .block {
@@ -306,8 +270,16 @@ main .menu__container .block:active .checkbox {
   animation: checkbox-translation 800ms ease-in-out;
   animation-fill-mode: forwards;
 }
+main .menu__container .block:not(:active) .checkbox {
+  animation: checkbox-translation-reverse 800ms ease-in-out;
+  animation-fill-mode: forwards;
+}
 main .menu__container .block:active .checkbox__icon {
   animation: checkbox-rotation 1000ms ease-in-out;
+  animation-fill-mode: forwards;
+}
+main .menu__container .block:not(:active) .checkbox__icon {
+  animation: checkbox-rotation-reverse 800ms ease-in-out;
   animation-fill-mode: forwards;
 }
 main .menu__container .block__menu_description {
@@ -320,6 +292,15 @@ main .menu__container .block__menu_description:active p {
 }
 @media screen and (min-width: 540px) {
   main .menu__container .block__menu_description:active p {
+    animation: none;
+  }
+}
+main .menu__container .block__menu_description:not(:active) p {
+  animation: description_p_width-reverse 1000ms ease-in-out;
+  animation-fill-mode: forwards;
+}
+@media screen and (min-width: 540px) {
+  main .menu__container .block__menu_description:not(:active) p {
     animation: none;
   }
 }
