--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -39,7 +39,13 @@ main {
 					z-index: 0;
 				}
 				.fas {
-					color: $primary-color;
+					background: linear-gradient(
+						360deg,
+						rgba(147, 86, 220, 1) 58%,
+						rgba(255, 121, 218, 1) 100%
+					);
+					-webkit-background-clip: text;
+					-webkit-text-fill-color: transparent;
 					opacity: 0;
 					position: absolute;
 					top: 10px;
@@ -67,19 +73,19 @@ main {
 
 			.container_animation {
 				transform-origin: top;
-				animation: menu_anim 800ms 1500ms ease-in-out;
+				animation: menu_anim 800ms ease-in-out;
 				animation-fill-mode: both;
 			}
 
 			.container_animation2 {
 				transform-origin: top;
-				animation: menu_anim 800ms 1500ms+500ms ease-in-out;
+				animation: menu_anim 800ms 500ms ease-in-out;
 				animation-fill-mode: both;
 			}
 
 			.container_animation3 {
 				transform-origin: top;
-				animation: menu_anim 800ms 1500ms+1000ms ease-in-out;
+				animation: menu_anim 800ms 1000ms ease-in-out;
 				animation-fill-mode: both;
 			}
 			.block {
@@ -96,8 +102,19 @@ main {
 					animation: checkbox-translation 800ms ease-in-out;
 					animation-fill-mode: forwards;
 				}
+
+				&:not(:active) .checkbox {
+					animation: checkbox-translation-reverse 800ms ease-in-out;
+					animation-fill-mode: forwards;
+				}
+
 				&:active .checkbox__icon {
 					animation: checkbox-rotation 1000ms ease-in-out;
+					animation-fill-mode: forwards;
+				}
+
+				&:not(:active) .checkbox__icon {
+					animation: checkbox-rotation-reverse 800ms ease-in-out;
 					animation-fill-mode: forwards;
 				}
 
@@ -106,6 +123,14 @@ main {
 					flex: 1;
 					&:active p {
 						animation: description_p_width 1000ms ease-in-out;
+						animation-fill-mode: forwards;
+						@include tablet-only {
+							animation: none;
+						}
+					}
+
+					&:not(:active) p {
+						animation: description_p_width-reverse 1000ms ease-in-out;
 						animation-fill-mode: forwards;
 						@include tablet-only {
 							animation: none;
