--- a/public/css/restaurant.css
+++ b/public/css/restaurant.css
@@ -243,17 +243,17 @@ main .menu__container .title .underline {
 }
 main .menu__container .container_animation {
   transform-origin: top;
-  animation: menu_anim 800ms ease-in-out;
+  animation: menu_anim 800ms 1000ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .container_animation2 {
   transform-origin: top;
-  animation: menu_anim 800ms 500ms ease-in-out;
+  animation: menu_anim 800ms 1500ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .container_animation3 {
   transform-origin: top;
-  animation: menu_anim 800ms 1000ms ease-in-out;
+  animation: menu_anim 800ms 2000ms ease-in-out;
   animation-fill-mode: both;
 }
 main .menu__container .block {
@@ -268,7 +268,7 @@ main .menu__container .block {
 }
 main .menu__container .block:active .checkbox {
   animation: checkbox-translation 800ms ease-in-out;
-  animation-fill-mode: forwards;
+  animation-fill-mode: both;
 }
 main .menu__container .block:not(:active) .checkbox {
   animation: checkbox-translation-reverse 800ms ease-in-out;
